LYtmp/y.output
   0  $accept : TPTP_file $end

   1  TPTP_file : null
   2            | TPTP_file TPTP_input

   3  TPTP_input : annotated_formula
   4             | include

   5  annotated_formula : thf_annotated
   6                    | tff_annotated
   7                    | tcf_annotated
   8                    | fof_annotated
   9                    | cnf_annotated
  10                    | tpi_annotated

  11  tpi_annotated : _LIT_tpi LPAREN name COMMA formula_role COMMA tpi_formula annotations RPAREN PERIOD

  12  tpi_formula : fof_formula

  13  thf_annotated : _LIT_thf LPAREN name COMMA formula_role COMMA thf_formula annotations RPAREN PERIOD

  14  tff_annotated : _LIT_tff LPAREN name COMMA formula_role COMMA tff_formula annotations RPAREN PERIOD

  15  tcf_annotated : _LIT_tcf LPAREN name COMMA formula_role COMMA tcf_formula annotations RPAREN PERIOD

  16  fof_annotated : _LIT_fof LPAREN name COMMA formula_role COMMA fof_formula annotations RPAREN PERIOD

  17  cnf_annotated : _LIT_cnf LPAREN name COMMA formula_role COMMA cnf_formula annotations RPAREN PERIOD

  18  annotations : COMMA source optional_info
  19              | null

  20  formula_role : lower_word
  21               | lower_word MINUS general_term

  22  thf_formula : thf_logic_formula
  23              | thf_atom_typing
  24              | thf_subtype

  25  thf_logic_formula : thf_unitary_formula
  26                    | thf_unary_formula
  27                    | thf_binary_formula
  28                    | thf_defined_infix
  29                    | thf_definition
  30                    | thf_sequent

  31  thf_binary_formula : thf_binary_nonassoc
  32                     | thf_binary_assoc
  33                     | thf_binary_type

  34  thf_binary_nonassoc : thf_unit_formula nonassoc_connective thf_unit_formula

  35  thf_binary_assoc : thf_or_formula
  36                   | thf_and_formula
  37                   | thf_apply_formula

  38  thf_or_formula : thf_unit_formula VLINE thf_unit_formula
  39                 | thf_or_formula VLINE thf_unit_formula

  40  thf_and_formula : thf_unit_formula AMPERSAND thf_unit_formula
  41                  | thf_and_formula AMPERSAND thf_unit_formula

  42  thf_apply_formula : thf_unit_formula AT_SIGN thf_unit_formula
  43                    | thf_apply_formula AT_SIGN thf_unit_formula

  44  thf_unit_formula : thf_unitary_formula
  45                   | thf_unary_formula
  46                   | thf_defined_infix

  47  thf_preunit_formula : thf_unitary_formula
  48                      | thf_prefix_unary

  49  thf_unitary_formula : thf_quantified_formula
  50                      | thf_atomic_formula
  51                      | variable
  52                      | LPAREN thf_logic_formula RPAREN

  53  thf_quantified_formula : thf_quantification thf_unit_formula

  54  thf_quantification : thf_quantifier LBRKT thf_variable_list RBRKT COLON

  55  thf_variable_list : thf_typed_variable
  56                    | thf_typed_variable COMMA thf_variable_list

  57  thf_typed_variable : variable COLON thf_top_level_type

  58  thf_unary_formula : thf_prefix_unary
  59                    | thf_infix_unary

  60  thf_prefix_unary : thf_unary_connective thf_preunit_formula

  61  thf_infix_unary : thf_unitary_term infix_inequality thf_unitary_term

  62  thf_atomic_formula : thf_plain_atomic
  63                     | thf_defined_atomic
  64                     | thf_system_atomic
  65                     | thf_fof_function

  66  thf_plain_atomic : constant
  67                   | thf_tuple

  68  thf_defined_atomic : defined_constant
  69                     | thf_defined_term
  70                     | LPAREN thf_conn_term RPAREN
  71                     | nhf_long_connective
  72                     | thf_let

  73  thf_defined_term : defined_term
  74                   | th1_defined_term

  75  thf_defined_infix : thf_unitary_term defined_infix_pred thf_unitary_term

  76  thf_system_atomic : system_constant

  77  thf_let : _DLR_let LPAREN thf_let_types COMMA thf_let_defns COMMA thf_logic_formula RPAREN

  78  thf_let_types : thf_atom_typing
  79                | LBRKT thf_atom_typing_list RBRKT

  80  thf_atom_typing_list : thf_atom_typing
  81                       | thf_atom_typing COMMA thf_atom_typing_list

  82  thf_let_defns : thf_let_defn
  83                | LBRKT thf_let_defn_list RBRKT

  84  thf_let_defn : thf_logic_formula assignment thf_logic_formula

  85  thf_let_defn_list : thf_let_defn
  86                    | thf_let_defn COMMA thf_let_defn_list

  87  thf_unitary_term : thf_atomic_formula
  88                   | variable
  89                   | LPAREN thf_logic_formula RPAREN

  90  thf_conn_term : nonassoc_connective
  91                | assoc_connective
  92                | infix_equality
  93                | infix_inequality
  94                | thf_unary_connective

  95  thf_tuple : LBRKT RBRKT
  96            | LBRKT thf_formula_list RBRKT

  97  thf_fof_function : functor LPAREN thf_arguments RPAREN
  98                   | defined_functor LPAREN thf_arguments RPAREN
  99                   | system_functor LPAREN thf_arguments RPAREN

 100  thf_arguments : thf_formula_list

 101  thf_formula_list : thf_logic_formula
 102                   | thf_logic_formula COMMA thf_formula_list

 103  thf_atom_typing : untyped_atom COLON thf_top_level_type
 104                  | LPAREN thf_atom_typing RPAREN

 105  thf_top_level_type : thf_unitary_type
 106                     | thf_mapping_type
 107                     | thf_apply_type

 108  thf_unitary_type : thf_unitary_formula

 109  thf_apply_type : thf_apply_formula

 110  thf_binary_type : thf_mapping_type
 111                  | thf_xprod_type
 112                  | thf_union_type

 113  thf_mapping_type : thf_unitary_type arrow thf_unitary_type
 114                   | thf_unitary_type arrow thf_mapping_type

 115  thf_xprod_type : thf_unitary_type STAR thf_unitary_type
 116                 | thf_xprod_type STAR thf_unitary_type

 117  thf_union_type : thf_unitary_type plus thf_unitary_type
 118                 | thf_union_type plus thf_unitary_type

 119  thf_subtype : untyped_atom subtype_sign atom

 120  thf_definition : thf_atomic_formula identical thf_logic_formula

 121  thf_sequent : thf_tuple gentzen_arrow thf_tuple

 122  tff_formula : tff_logic_formula
 123              | tff_atom_typing
 124              | tff_subtype

 125  tff_logic_formula : tff_unitary_formula
 126                    | tff_unary_formula
 127                    | tff_binary_formula
 128                    | tff_defined_infix
 129                    | txf_definition
 130                    | txf_sequent

 131  tff_binary_formula : tff_binary_nonassoc
 132                     | tff_binary_assoc

 133  tff_binary_nonassoc : tff_unit_formula nonassoc_connective tff_unit_formula

 134  tff_binary_assoc : tff_or_formula
 135                   | tff_and_formula

 136  tff_or_formula : tff_unit_formula VLINE tff_unit_formula
 137                 | tff_or_formula VLINE tff_unit_formula

 138  tff_and_formula : tff_unit_formula AMPERSAND tff_unit_formula
 139                  | tff_and_formula AMPERSAND tff_unit_formula

 140  tff_unit_formula : tff_unitary_formula
 141                   | tff_unary_formula
 142                   | tff_defined_infix

 143  tff_preunit_formula : tff_unitary_formula
 144                      | tff_prefix_unary

 145  tff_unitary_formula : tff_quantified_formula
 146                      | tff_atomic_formula
 147                      | txf_unitary_formula
 148                      | LPAREN tff_logic_formula RPAREN

 149  txf_unitary_formula : variable

 150  tff_quantified_formula : fof_quantifier LBRKT tff_variable_list RBRKT COLON tff_unit_formula

 151  tff_variable_list : tff_variable
 152                    | tff_variable COMMA tff_variable_list

 153  tff_variable : tff_typed_variable
 154               | variable

 155  tff_typed_variable : variable COLON tff_atomic_type

 156  tff_unary_formula : tff_prefix_unary
 157                    | tff_infix_unary

 158  tff_prefix_unary : tff_unary_connective tff_preunit_formula

 159  tff_infix_unary : tff_unitary_term infix_inequality tff_unitary_term

 160  tff_atomic_formula : tff_plain_atomic
 161                     | tff_defined_atomic
 162                     | tff_system_atomic

 163  tff_plain_atomic : constant
 164                   | functor LPAREN tff_arguments RPAREN

 165  tff_defined_atomic : tff_defined_plain

 166  tff_defined_plain : defined_constant
 167                    | defined_functor LPAREN tff_arguments RPAREN
 168                    | nxf_atom
 169                    | txf_let

 170  tff_defined_infix : tff_unitary_term defined_infix_pred tff_unitary_term

 171  tff_system_atomic : system_constant
 172                    | system_functor LPAREN tff_arguments RPAREN

 173  txf_let : _DLR_let LPAREN txf_let_types COMMA txf_let_defns COMMA tff_term RPAREN

 174  txf_let_types : tff_atom_typing
 175                | LBRKT tff_atom_typing_list RBRKT

 176  tff_atom_typing_list : tff_atom_typing
 177                       | tff_atom_typing COMMA tff_atom_typing_list

 178  txf_let_defns : txf_let_defn
 179                | LBRKT txf_let_defn_list RBRKT

 180  txf_let_defn : txf_let_LHS assignment tff_term

 181  txf_let_LHS : tff_plain_atomic
 182              | txf_tuple

 183  txf_let_defn_list : txf_let_defn
 184                    | txf_let_defn COMMA txf_let_defn_list

 185  nxf_atom : nxf_long_connective AT_SIGN LPAREN tff_arguments RPAREN

 186  tff_term : tff_logic_formula
 187           | defined_term
 188           | txf_tuple

 189  tff_unitary_term : tff_atomic_formula
 190                   | defined_term
 191                   | txf_tuple
 192                   | variable
 193                   | LPAREN tff_logic_formula RPAREN

 194  txf_tuple : LBRKT RBRKT
 195            | LBRKT tff_arguments RBRKT

 196  tff_arguments : tff_term
 197                | tff_term COMMA tff_arguments

 198  tff_atom_typing : untyped_atom COLON tff_top_level_type
 199                  | LPAREN tff_atom_typing RPAREN

 200  tff_top_level_type : tff_atomic_type
 201                     | tff_non_atomic_type

 202  tff_non_atomic_type : tff_mapping_type
 203                      | tf1_quantified_type
 204                      | LPAREN tff_non_atomic_type RPAREN

 205  tf1_quantified_type : EXCLAMATION_GREATER LBRKT tff_variable_list RBRKT COLON tff_monotype

 206  tff_monotype : tff_atomic_type
 207               | LPAREN tff_mapping_type RPAREN
 208               | tf1_quantified_type

 209  tff_unitary_type : tff_atomic_type
 210                   | LPAREN tff_xprod_type RPAREN

 211  tff_atomic_type : type_constant
 212                  | defined_type
 213                  | variable
 214                  | type_functor LPAREN tff_type_arguments RPAREN
 215                  | LPAREN tff_atomic_type RPAREN
 216                  | txf_tuple_type

 217  tff_type_arguments : tff_atomic_type
 218                     | tff_atomic_type COMMA tff_type_arguments

 219  tff_mapping_type : tff_unitary_type arrow tff_atomic_type

 220  tff_xprod_type : tff_unitary_type STAR tff_atomic_type
 221                 | tff_xprod_type STAR tff_atomic_type

 222  txf_tuple_type : LBRKT tff_type_list RBRKT

 223  tff_type_list : tff_top_level_type
 224                | tff_top_level_type COMMA tff_type_list

 225  tff_subtype : untyped_atom subtype_sign atom

 226  txf_definition : tff_atomic_formula identical tff_term

 227  txf_sequent : txf_tuple gentzen_arrow txf_tuple

 228  nhf_long_connective : LBRACE ntf_connective_name RBRACE
 229                      | LBRACE ntf_connective_name LPAREN nhf_parameter_list RPAREN RBRACE

 230  nhf_parameter_list : nhf_parameter
 231                     | nhf_parameter COMMA nhf_parameter_list

 232  nhf_parameter : ntf_index
 233                | nhf_key_pair

 234  nhf_key_pair : thf_definition

 235  nxf_long_connective : LBRACE ntf_connective_name RBRACE
 236                      | LBRACE ntf_connective_name LPAREN nxf_parameter_list RPAREN RBRACE

 237  ntf_connective_name : def_or_sys_constant

 238  nxf_parameter_list : nxf_parameter
 239                     | nxf_parameter COMMA nxf_parameter_list

 240  nxf_parameter : ntf_index
 241                | nxf_key_pair

 242  nxf_key_pair : txf_definition

 243  ntf_short_connective : LBRKT PERIOD RBRKT
 244                       | less_sign PERIOD arrow
 245                       | LBRACE PERIOD RBRACE

 246  ntf_index : hash tff_unitary_term

 247  tcf_formula : tcf_logic_formula
 248              | tff_atom_typing

 249  tcf_logic_formula : tcf_quantified_formula
 250                    | cnf_formula

 251  tcf_quantified_formula : EXCLAMATION LBRKT tff_variable_list RBRKT COLON tcf_logic_formula

 252  fof_formula : fof_logic_formula
 253              | fof_sequent

 254  fof_logic_formula : fof_binary_formula
 255                    | fof_unary_formula
 256                    | fof_unitary_formula

 257  fof_binary_formula : fof_binary_nonassoc
 258                     | fof_binary_assoc

 259  fof_binary_nonassoc : fof_unit_formula nonassoc_connective fof_unit_formula

 260  fof_binary_assoc : fof_or_formula
 261                   | fof_and_formula

 262  fof_or_formula : fof_unit_formula VLINE fof_unit_formula
 263                 | fof_or_formula VLINE fof_unit_formula

 264  fof_and_formula : fof_unit_formula AMPERSAND fof_unit_formula
 265                  | fof_and_formula AMPERSAND fof_unit_formula

 266  fof_unary_formula : unary_connective fof_unit_formula
 267                    | fof_infix_unary

 268  fof_infix_unary : fof_term infix_inequality fof_term

 269  fof_unit_formula : fof_unitary_formula
 270                   | fof_unary_formula

 271  fof_unitary_formula : fof_quantified_formula
 272                      | fof_atomic_formula
 273                      | LPAREN fof_logic_formula RPAREN

 274  fof_quantified_formula : fof_quantifier LBRKT fof_variable_list RBRKT COLON fof_unit_formula

 275  fof_variable_list : variable
 276                    | variable COMMA fof_variable_list

 277  fof_atomic_formula : fof_plain_atomic_formula
 278                     | fof_defined_atomic_formula
 279                     | fof_system_atomic_formula

 280  fof_plain_atomic_formula : fof_plain_term

 281  fof_defined_atomic_formula : fof_defined_plain_formula
 282                             | fof_defined_infix_formula

 283  fof_defined_plain_formula : fof_defined_plain_term

 284  fof_defined_infix_formula : fof_term defined_infix_pred fof_term

 285  fof_system_atomic_formula : fof_system_term

 286  fof_plain_term : constant
 287                 | functor LPAREN fof_arguments RPAREN

 288  fof_defined_term : defined_term
 289                   | fof_defined_atomic_term

 290  fof_defined_atomic_term : fof_defined_plain_term

 291  fof_defined_plain_term : defined_constant
 292                         | defined_functor LPAREN fof_arguments RPAREN

 293  fof_system_term : system_constant
 294                  | system_functor LPAREN fof_arguments RPAREN

 295  fof_arguments : fof_term
 296                | fof_term COMMA fof_arguments

 297  fof_term : fof_function_term
 298           | variable

 299  fof_function_term : fof_plain_term
 300                    | fof_defined_term
 301                    | fof_system_term

 302  fof_sequent : fof_formula_tuple gentzen_arrow fof_formula_tuple
 303              | LPAREN fof_sequent RPAREN

 304  fof_formula_tuple : LBRACE RBRACE
 305                    | LBRACE fof_formula_tuple_list RBRACE

 306  fof_formula_tuple_list : fof_logic_formula
 307                         | fof_logic_formula COMMA fof_formula_tuple_list

 308  cnf_formula : cnf_disjunction
 309              | LPAREN cnf_formula RPAREN

 310  cnf_disjunction : cnf_literal
 311                  | cnf_disjunction VLINE cnf_literal

 312  cnf_literal : fof_atomic_formula
 313              | TILDE fof_atomic_formula
 314              | TILDE LPAREN fof_atomic_formula RPAREN
 315              | fof_infix_unary

 316  thf_quantifier : fof_quantifier
 317                 | th0_quantifier
 318                 | th1_quantifier

 319  thf_unary_connective : unary_connective
 320                       | ntf_short_connective

 321  th1_quantifier : EXCLAMATION_GREATER
 322                 | QUESTION_STAR

 323  th0_quantifier : CARET
 324                 | AT_SIGN_PLUS
 325                 | AT_SIGN_MINUS

 326  subtype_sign : LESS_LESS

 327  tff_unary_connective : unary_connective
 328                       | ntf_short_connective

 329  fof_quantifier : EXCLAMATION
 330                 | QUESTION

 331  nonassoc_connective : LESS_EQUALS_GREATER
 332                      | EQUALS_GREATER
 333                      | LESS_EQUALS
 334                      | LESS_TILDE_GREATER
 335                      | TILDE_VLINE
 336                      | TILDE_AMPERSAND

 337  assoc_connective : VLINE
 338                   | AMPERSAND

 339  unary_connective : TILDE

 340  gentzen_arrow : MINUS_MINUS_GREATER

 341  assignment : COLON_EQUALS

 342  identical : EQUALS_EQUALS

 343  type_constant : type_functor

 344  type_functor : atomic_word

 345  defined_type : atomic_defined_word

 346  atom : untyped_atom
 347       | defined_constant

 348  untyped_atom : constant
 349               | system_constant

 350  defined_infix_pred : infix_equality

 351  infix_equality : EQUALS

 352  infix_inequality : EXCLAMATION_EQUALS

 353  constant : functor

 354  functor : atomic_word

 355  defined_constant : defined_functor

 356  defined_functor : atomic_defined_word

 357  system_constant : system_functor

 358  system_functor : atomic_system_word

 359  def_or_sys_constant : defined_constant
 360                      | system_constant

 361  th1_defined_term : EXCLAMATION_EXCLAMATION
 362                   | QUESTION_QUESTION
 363                   | AT_AT_SIGN_PLUS
 364                   | AT_AT_SIGN_MINUS
 365                   | AT_SIGN_EQUALS

 366  defined_term : number
 367               | distinct_object

 368  variable : upper_word

 369  source : general_term

 370  optional_info : COMMA useful_info
 371                | null

 372  useful_info : general_list

 373  include : _LIT_include LPAREN file_name include_optionals RPAREN PERIOD

 374  include_optionals : null
 375                    | COMMA formula_selection
 376                    | COMMA formula_selection COMMA space_name

 377  formula_selection : LBRKT name_list RBRKT
 378                    | STAR

 379  name_list : name
 380            | name COMMA name_list

 381  space_name : name

 382  general_term : general_data
 383               | general_data COLON general_term
 384               | general_list

 385  general_data : atomic_word
 386               | general_function
 387               | variable
 388               | number
 389               | distinct_object
 390               | formula_data

 391  general_function : atomic_word LPAREN general_terms RPAREN

 392  formula_data : _DLR_thf LPAREN thf_formula RPAREN
 393               | _DLR_tff LPAREN tff_formula RPAREN
 394               | _DLR_fof LPAREN fof_formula RPAREN
 395               | _DLR_cnf LPAREN cnf_formula RPAREN
 396               | _DLR_fot LPAREN fof_term RPAREN

 397  general_list : LBRKT RBRKT
 398               | LBRKT general_terms RBRKT

 399  general_terms : general_term
 400                | general_term COMMA general_terms

 401  name : atomic_word
 402       | integer

 403  atomic_word : lower_word
 404              | single_quoted

 405  atomic_defined_word : dollar_word

 406  atomic_system_word : dollar_dollar_word

 407  number : integer
 408         | rational
 409         | real

 410  file_name : single_quoted

 411  null :

state 0
	$accept : . TPTP_file $end  (0)
	null : .  (411)

	.  reduce 411

	TPTP_file  goto 1
	null  goto 2


state 1
	$accept : TPTP_file . $end  (0)
	TPTP_file : TPTP_file . TPTP_input  (2)

	$end  accept
	_LIT_cnf  shift 3
	_LIT_fof  shift 4
	_LIT_include  shift 5
	_LIT_tcf  shift 6
	_LIT_tff  shift 7
	_LIT_thf  shift 8
	_LIT_tpi  shift 9
	.  error

	TPTP_input  goto 10
	annotated_formula  goto 11
	include  goto 12
	thf_annotated  goto 13
	tff_annotated  goto 14
	tcf_annotated  goto 15
	fof_annotated  goto 16
	cnf_annotated  goto 17
	tpi_annotated  goto 18


state 2
	TPTP_file : null .  (1)

	.  reduce 1


state 3
	cnf_annotated : _LIT_cnf . LPAREN name COMMA formula_role COMMA cnf_formula annotations RPAREN PERIOD  (17)

	LPAREN  shift 19
	.  error


state 4
	fof_annotated : _LIT_fof . LPAREN name COMMA formula_role COMMA fof_formula annotations RPAREN PERIOD  (16)

	LPAREN  shift 20
	.  error


state 5
	include : _LIT_include . LPAREN file_name include_optionals RPAREN PERIOD  (373)

	LPAREN  shift 21
	.  error


state 6
	tcf_annotated : _LIT_tcf . LPAREN name COMMA formula_role COMMA tcf_formula annotations RPAREN PERIOD  (15)

	LPAREN  shift 22
	.  error


state 7
	tff_annotated : _LIT_tff . LPAREN name COMMA formula_role COMMA tff_formula annotations RPAREN PERIOD  (14)

	LPAREN  shift 23
	.  error


state 8
	thf_annotated : _LIT_thf . LPAREN name COMMA formula_role COMMA thf_formula annotations RPAREN PERIOD  (13)

	LPAREN  shift 24
	.  error


state 9
	tpi_annotated : _LIT_tpi . LPAREN name COMMA formula_role COMMA tpi_formula annotations RPAREN PERIOD  (11)

	LPAREN  shift 25
	.  error


state 10
	TPTP_file : TPTP_file TPTP_input .  (2)

	.  reduce 2


state 11
	TPTP_input : annotated_formula .  (3)

	.  reduce 3


state 12
	TPTP_input : include .  (4)

	.  reduce 4


state 13
	annotated_formula : thf_annotated .  (5)

	.  reduce 5


state 14
	annotated_formula : tff_annotated .  (6)

	.  reduce 6


state 15
	annotated_formula : tcf_annotated .  (7)

	.  reduce 7


state 16
	annotated_formula : fof_annotated .  (8)

	.  reduce 8


state 17
	annotated_formula : cnf_annotated .  (9)

	.  reduce 9


state 18
	annotated_formula : tpi_annotated .  (10)

	.  reduce 10


state 19
	cnf_annotated : _LIT_cnf LPAREN . name COMMA formula_role COMMA cnf_formula annotations RPAREN PERIOD  (17)

	integer  shift 26
	lower_word  shift 27
	single_quoted  shift 28
	.  error

	name  goto 29
	atomic_word  goto 30


state 20
	fof_annotated : _LIT_fof LPAREN . name COMMA formula_role COMMA fof_formula annotations RPAREN PERIOD  (16)

	integer  shift 26
	lower_word  shift 27
	single_quoted  shift 28
	.  error

	name  goto 31
	atomic_word  goto 30


state 21
	include : _LIT_include LPAREN . file_name include_optionals RPAREN PERIOD  (373)

	single_quoted  shift 32
	.  error

	file_name  goto 33


state 22
	tcf_annotated : _LIT_tcf LPAREN . name COMMA formula_role COMMA tcf_formula annotations RPAREN PERIOD  (15)

	integer  shift 26
	lower_word  shift 27
	single_quoted  shift 28
	.  error

	name  goto 34
	atomic_word  goto 30


state 23
	tff_annotated : _LIT_tff LPAREN . name COMMA formula_role COMMA tff_formula annotations RPAREN PERIOD  (14)

	integer  shift 26
	lower_word  shift 27
	single_quoted  shift 28
	.  error

	name  goto 35
	atomic_word  goto 30


state 24
	thf_annotated : _LIT_thf LPAREN . name COMMA formula_role COMMA thf_formula annotations RPAREN PERIOD  (13)

	integer  shift 26
	lower_word  shift 27
	single_quoted  shift 28
	.  error

	name  goto 36
	atomic_word  goto 30


state 25
	tpi_annotated : _LIT_tpi LPAREN . name COMMA formula_role COMMA tpi_formula annotations RPAREN PERIOD  (11)

	integer  shift 26
	lower_word  shift 27
	single_quoted  shift 28
	.  error

	name  goto 37
	atomic_word  goto 30


state 26
	name : integer .  (402)

	.  reduce 402


state 27
	atomic_word : lower_word .  (403)

	.  reduce 403


state 28
	atomic_word : single_quoted .  (404)

	.  reduce 404


state 29
	cnf_annotated : _LIT_cnf LPAREN name . COMMA formula_role COMMA cnf_formula annotations RPAREN PERIOD  (17)

	COMMA  shift 38
	.  error


state 30
	name : atomic_word .  (401)

	.  reduce 401


state 31
	fof_annotated : _LIT_fof LPAREN name . COMMA formula_role COMMA fof_formula annotations RPAREN PERIOD  (16)

	COMMA  shift 39
	.  error


state 32
	file_name : single_quoted .  (410)

	.  reduce 410


state 33
	include : _LIT_include LPAREN file_name . include_optionals RPAREN PERIOD  (373)
	null : .  (411)

	COMMA  shift 40
	RPAREN  reduce 411

	null  goto 41
	include_optionals  goto 42


state 34
	tcf_annotated : _LIT_tcf LPAREN name . COMMA formula_role COMMA tcf_formula annotations RPAREN PERIOD  (15)

	COMMA  shift 43
	.  error


state 35
	tff_annotated : _LIT_tff LPAREN name . COMMA formula_role COMMA tff_formula annotations RPAREN PERIOD  (14)

	COMMA  shift 44
	.  error


state 36
	thf_annotated : _LIT_thf LPAREN name . COMMA formula_role COMMA thf_formula annotations RPAREN PERIOD  (13)

	COMMA  shift 45
	.  error


state 37
	tpi_annotated : _LIT_tpi LPAREN name . COMMA formula_role COMMA tpi_formula annotations RPAREN PERIOD  (11)

	COMMA  shift 46
	.  error


state 38
	cnf_annotated : _LIT_cnf LPAREN name COMMA . formula_role COMMA cnf_formula annotations RPAREN PERIOD  (17)

	lower_word  shift 47
	.  error

	formula_role  goto 48


state 39
	fof_annotated : _LIT_fof LPAREN name COMMA . formula_role COMMA fof_formula annotations RPAREN PERIOD  (16)

	lower_word  shift 47
	.  error

	formula_role  goto 49


state 40
	include_optionals : COMMA . formula_selection  (375)
	include_optionals : COMMA . formula_selection COMMA space_name  (376)

	LBRKT  shift 50
	STAR  shift 51
	.  error

	formula_selection  goto 52


state 41
	include_optionals : null .  (374)

	.  reduce 374


state 42
	include : _LIT_include LPAREN file_name include_optionals . RPAREN PERIOD  (373)

	RPAREN  shift 53
	.  error


state 43
	tcf_annotated : _LIT_tcf LPAREN name COMMA . formula_role COMMA tcf_formula annotations RPAREN PERIOD  (15)

	lower_word  shift 47
	.  error

	formula_role  goto 54


state 44
	tff_annotated : _LIT_tff LPAREN name COMMA . formula_role COMMA tff_formula annotations RPAREN PERIOD  (14)

	lower_word  shift 47
	.  error

	formula_role  goto 55


state 45
	thf_annotated : _LIT_thf LPAREN name COMMA . formula_role COMMA thf_formula annotations RPAREN PERIOD  (13)

	lower_word  shift 47
	.  error

	formula_role  goto 56


state 46
	tpi_annotated : _LIT_tpi LPAREN name COMMA . formula_role COMMA tpi_formula annotations RPAREN PERIOD  (11)

	lower_word  shift 47
	.  error

	formula_role  goto 57


state 47
	formula_role : lower_word .  (20)
	formula_role : lower_word . MINUS general_term  (21)

	MINUS  shift 58
	COMMA  reduce 20


state 48
	cnf_annotated : _LIT_cnf LPAREN name COMMA formula_role . COMMA cnf_formula annotations RPAREN PERIOD  (17)

	COMMA  shift 59
	.  error


state 49
	fof_annotated : _LIT_fof LPAREN name COMMA formula_role . COMMA fof_formula annotations RPAREN PERIOD  (16)

	COMMA  shift 60
	.  error


state 50
	formula_selection : LBRKT . name_list RBRKT  (377)

	integer  shift 26
	lower_word  shift 27
	single_quoted  shift 28
	.  error

	name  goto 61
	atomic_word  goto 30
	name_list  goto 62


state 51
	formula_selection : STAR .  (378)

	.  reduce 378


state 52
	include_optionals : COMMA formula_selection .  (375)
	include_optionals : COMMA formula_selection . COMMA space_name  (376)

	COMMA  shift 63
	RPAREN  reduce 375


state 53
	include : _LIT_include LPAREN file_name include_optionals RPAREN . PERIOD  (373)

	PERIOD  shift 64
	.  error


state 54
	tcf_annotated : _LIT_tcf LPAREN name COMMA formula_role . COMMA tcf_formula annotations RPAREN PERIOD  (15)

	COMMA  shift 65
	.  error


state 55
	tff_annotated : _LIT_tff LPAREN name COMMA formula_role . COMMA tff_formula annotations RPAREN PERIOD  (14)

	COMMA  shift 66
	.  error


state 56
	thf_annotated : _LIT_thf LPAREN name COMMA formula_role . COMMA thf_formula annotations RPAREN PERIOD  (13)

	COMMA  shift 67
	.  error


state 57
	tpi_annotated : _LIT_tpi LPAREN name COMMA formula_role . COMMA tpi_formula annotations RPAREN PERIOD  (11)

	COMMA  shift 68
	.  error


state 58
	formula_role : lower_word MINUS . general_term  (21)

	LBRKT  shift 69
	_DLR_cnf  shift 70
	_DLR_fof  shift 71
	_DLR_fot  shift 72
	_DLR_tff  shift 73
	_DLR_thf  shift 74
	distinct_object  shift 75
	integer  shift 76
	lower_word  shift 27
	rational  shift 77
	real  shift 78
	single_quoted  shift 28
	upper_word  shift 79
	.  error

	general_term  goto 80
	variable  goto 81
	atomic_word  goto 82
	number  goto 83
	general_list  goto 84
	general_data  goto 85
	general_function  goto 86
	formula_data  goto 87


state 59
	cnf_annotated : _LIT_cnf LPAREN name COMMA formula_role COMMA . cnf_formula annotations RPAREN PERIOD  (17)

	LPAREN  shift 88
	TILDE  shift 89
	distinct_object  shift 90
	dollar_dollar_word  shift 91
	dollar_word  shift 92
	integer  shift 76
	lower_word  shift 27
	rational  shift 77
	real  shift 78
	single_quoted  shift 28
	upper_word  shift 79
	.  error

	cnf_formula  goto 93
	variable  goto 94
	constant  goto 95
	defined_constant  goto 96
	defined_term  goto 97
	system_constant  goto 98
	functor  goto 99
	defined_functor  goto 100
	system_functor  goto 101
	fof_infix_unary  goto 102
	fof_term  goto 103
	fof_atomic_formula  goto 104
	fof_plain_atomic_formula  goto 105
	fof_defined_atomic_formula  goto 106
	fof_system_atomic_formula  goto 107
	fof_plain_term  goto 108
	fof_defined_plain_formula  goto 109
	fof_defined_infix_formula  goto 110
	fof_defined_plain_term  goto 111
	fof_system_term  goto 112
	fof_defined_term  goto 113
	fof_defined_atomic_term  goto 114
	fof_function_term  goto 115
	cnf_disjunction  goto 116
	cnf_literal  goto 117
	atomic_word  goto 118
	atomic_defined_word  goto 119
	atomic_system_word  goto 120
	number  goto 121


state 60
	fof_annotated : _LIT_fof LPAREN name COMMA formula_role COMMA . fof_formula annotations RPAREN PERIOD  (16)

	EXCLAMATION  shift 122
	LBRACE  shift 123
	LPAREN  shift 124
	QUESTION  shift 125
	TILDE  shift 126
	distinct_object  shift 90
	dollar_dollar_word  shift 91
	dollar_word  shift 92
	integer  shift 76
	lower_word  shift 27
	rational  shift 77
	real  shift 78
	single_quoted  shift 28
	upper_word  shift 79
	.  error
